--- a/src/app/components/add-product/add-product.component.css
+++ b/src/app/components/add-product/add-product.component.css
@@ -6,13 +6,14 @@
   }
   .form-group {
     display: flex;
-    gap: 20px;
+    gap: 60px;
   }
   .form-group input {
     padding: 10px;
     border-radius: 20px;
     border: 1px solid #ccc;
     outline: none;
+    margin: 10px 10px;
   }
   button {
     padding: 10px 20px;
