--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -2,10 +2,11 @@
   <h2>Add New Product</h2>
   <div class="form-group">
     <div>
-      <input type="text" placeholder="Product Name" [(ngModel)]="newStock.name">
-      <input type="number" placeholder="Barcode" [(ngModel)]="newStock.barcode">
-      <input type="number" placeholder="Price" [(ngModel)]="newStock.price">
-      <input type="number" placeholder="Quantity" [(ngModel)]="newStock.quantity">
+      <input type="text" placeholder="Product Name" [(ngModel)]="newStock.name" name="name">
+      <input type="number" placeholder="Barcode" [(ngModel)]="newStock.barcode" name="barcode">
+      <input type="number" placeholder="Price" [(ngModel)]="newStock.price" name="price"><br>
+      <input type="number" placeholder="Quantity" [(ngModel)]="newStock.quantity" name="quantity">
+      <input type="file" (change)="onImageSelected($event)" name="image">
       <button (click)="addStock()">Add Stock</button>
     </div>
   </div>
