--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,8 +1,26 @@
-.dashboard-container {
-    display: flex;
-    height: 100vh;
+.container {
     padding: 20px;
   }
+    .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+  .actions input {
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+    .status {
+      padding: 10px 20px;
+      background-color: #1E90FF;
+      color: #ffffff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   .dashboard-cards button {
     width: 150px;
     padding: 20px;
