--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,15 +1,19 @@
 <div class="dashboard-container">
-  <div class="top-bar">
-    <h2>Dashboard</h2>
-    <div class="actions">
-      <input
-  type="text"
-  placeholder="Quick search"
-/>
-
-      <button class="status">Status</button>
+  <div class="container">
+    <div class="top-bar">
+      <h2>Dashboard</h2>
+      <div class="actions">
+        <input
+          type="text"
+          placeholder="Quick search"
+          [(ngModel)]="searchTerm"
+          (input)="filterStocks()"
+        />
+        <button class="status">Status</button>
+      </div>
     </div>
-  </div>
+
+
   <div class="main-content">
     <div class="dashboard-cards">
       <a href="/employee" target="demo" active><button>Employees</button></a>
@@ -18,4 +22,5 @@
       <a href="/addproduct" target="demo"><button>Add Product</button></a>
     </div>
   </div>
+</div>
 </div>
