--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -2,6 +2,7 @@
     height: 91%;
     padding: 20px;
     font-size: 12px;
+    text-align: center;
   }
   .sidebar-container ul {
     list-style: none;
