--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <!-- Sidebar -->
 <div class="sidebar-container">
   <ul>
-    <li><a href="/dashboard" target="demo" class="nav-link active"><i class="fa-solid fa-table-cells-large"></i><br>Dashboard</a></li>
-    <li><a href="/instack" target="demo" class="nav-link"><i class="fa-solid fa-cubes-stacked"></i><br>In Stock</a></li>
-    <li><a href="/outsatck" target="demo" class="nav-link"><i class="fa-solid fa-share-from-square"></i><br>Out Stock</a></li>
-    <li><a href="/employee" target="demo" class="nav-link"><i class="fa-solid fa-user"></i><br>Employees</a></li>
-    <li><a href="/addproduct" target="demo" class="nav-link"><i class="fa-solid fa-download"></i><br>Add Product</a></li>
+    <li><a href="/dashboard" target="demo" class="nav-link active"><i class="fa-solid fa-table-cells-large"></i>Dashboard</a></li>
+    <li><a href="/instack" target="demo" class="nav-link"><i class="fa-solid fa-cubes-stacked"></i>In Stock</a></li>
+    <li><a href="/outsatck" target="demo" class="nav-link"><i class="fa-solid fa-share-from-square"></i>Out Stock</a></li>
+    <li><a href="/employee" target="demo" class="nav-link"><i class="fa-solid fa-user"></i>Employees</a></li>
+    <li><a href="/addproduct" target="demo" class="nav-link"><i class="fa-solid fa-download"></i>Add Product</a></li>
   </ul>
 </div>
 
